--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="space.js" charset="utf-8"></script>
     <script src="globe.js" charset="utf-8"></script>
+    <script src="iss.js" charset="utf-8"></script>
     <script src="./main.js" charset="utf-8"></script>
     <script src="rotate.js" charset="utf-8"></script>
 </body>
